--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter",
+  "name": "1degree2me",
   "version": "1.0.0",
-  "description": "Gatsby 1.0 starter",
-  "author": "fabien0102 <fabien0102@gmail.com>",
+  "description": "Covid Rememberance and Awareness Symbol",
+  "author": "Erich Wilgenbus <erichfw@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "gatsby develop",
@@ -89,7 +89,7 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "flat": "^4.1.0",
-    "husky": "2.3.0",
+    "husky": "^2.3.0",
     "jest": "^24.8.0",
     "lint-staged": "8.1.7",
     "mkdirp": "^0.5.1",
@@ -104,7 +104,8 @@
     "stylelint-config-standard": "^18.3.0",
     "ts-jest": "^24.0.2",
     "ts-lint": "4.5.1",
-    "typescript": "^3.5.0",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
     "xo": "0.24.0"
   },
   "eslintConfig": {
