Resolves #4 : Deploy version 1 site to S3 and setup CI/CD

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:scss": "stylelint src/**/*.scss --syntax scss",
     "test": "npm run lint && jest",
     "test:watch": "jest --watch",
+    "deploy": "gatsby-plugin-s3 deploy",
     "generate": "plop --plopfile ./generators/plopfile.js",
     "graphql-types": "graphql-codegen --config ./graphql-config.yml",
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -36,6 +37,7 @@
     "gatsby-plugin-manifest": "^2.11.0",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.9.0",
+    "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^2.13.1",
     "gatsby-plugin-typescript": "^2.11.0",
     "gatsby-remark-autolink-headers": "^2.10.0",
