--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 
 # Created by https://www.gitignore.io/api/osx,vim,node,windows,visualstudiocode
 
+## Local files (not sharing)
+.local
+.local/*
+
+
 ### Node ###
 # Logs
 logs
