--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install AWS CLI
-        uses: ItsKarma/aws-cli@v1.70.0
+        uses: chrislennon/action-aws-cli@v1.1
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
