--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Install AWS CLI
-        uses: chrislennon/action-aws-cli@v1.1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -33,10 +37,6 @@ jobs:
           npm run build --if-present
       - name: Test site  
         run: npm test   
-      - name: Publish site
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: eu-west-2
-        run: npm run deploy  
+      - name: Deploy site  
+        run: npm deploy 
         
